-----------
v6.0.0beta1
-----------

[jan] Fix displaying messages in a popup (Bug #11251).
[jan] Fix automatic selection of the default identity if other identities
      contain the same address(es).
[jan] Fix editing mailbox ACLs (Bug #11247).
[jan] Fix using admin users and passwords for quota or mailbox management.


------------
v6.0.0alpha1
------------

[mms] Fix browser-based AJAX autocompletion (Bug #11233).
First alpha release for Horde 5.
[mms] Only show Inbox, special mailboxes, and polled mailboxes by default in
      smartmobile view.
[mms] Add 'reply_strip_sig' preference (Request #11056).
[mms] Move attachment strip icon to MIME part tree display.
[mms] Convert dynamic view to Horde_View.
[mms] Convert minimal view to Horde_View.
[mms] Honor initial_page preference in smartmobile view (Request #11165).
[mms] Lock mailbox sort to descending date when using minimal view.
[mms] Pre-fetch next unseen message in INBOX in dynamic view.
[mms] Allow Edit As New to be used as the default forward action (Request
      #11135).
[mms] Improved handling of messages with multiple From addresses in mailbox
      views.
[mms] Replying to a multipart/related message in HTML mode now correctly
      attaches data from the original message.
[mms] Allow deletion of all subfolders at once in dynamic view.
[mms] Provide details of when search results were last refreshed.
[mms] Dynamically update unseen message counts in folder list in smartmobile
      view.
[mms] Add mailbox caching to the smartmobile view.
[mms] Cache last seen message in smartmobile view.
[mms] Viewing a mailbox in smartmobile mode no longer resets the sortpref
      preference.
[mms] Allow all SMTP configuration parameters to be overridden in the backends
      configuration file (Request #11051).
[mms] Block images in HTML messages that appear to be sent from you by default,
      to prevent spammers form easily circumventing the block.