@@ -2,6 +2,7 @@
 v6.0.0beta1
 -----------
 
+[mms] Fix regression in creating submailboxes in dynamic view.
 [jan] Fix displaying messages in a popup (Bug #11251).
 [jan] Fix automatic selection of the default identity if other identities
       contain the same address(es).
